# mushroom_decision_tree

./: README.md  mushroom_analysis.ipynb  pyproject.toml
.github/workflows/: master_train_release.yml  staging_publish.yml  staging_release.yml
analysis/: mushroom_analysis.ipynb  mushrooms_tree.ipynb
orchestrator/: orchestrator_train.py
results/: conf_matrix_train_dt_v1.csv  conf_matrix_train_dt_v2.json  feature_importance_dt_v1.csv  feature_importance_dt_v2.json
